# super-tool

./: index.html  package-lock.json  package.json  script.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
New Folder With Items/: index.html  package-lock.json  tsconfig.json  vite.config.ts
New Folder With Items/src-tauri/: tauri.conf.json
New Folder With Items/src-tauri/src/: main.rs
New Folder With Items/src/components/layout/: MainLayout.css  Sidebar.css
New Folder With Items/src/modules/super-browser/: SuperBrowserApp.tsx
New Folder With Items/src/pages/: HomePage.tsx
New Folder With Items/src/routes/: index.tsx
electron/: main.ts  preload.ts
electron/backend/: index.ts
electron/backend/super-browser/: ahaSlidesBotHandler.ts  types.ts
public/: test-page.html
src/: electronApi.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  super_browser.rs
src/components/layout/: Header.css  Header.tsx  MainLayout.css  MainLayout.tsx  Sidebar.tsx
src/modules/super-browser/: SuperBrowserApp.css  SuperBrowserApp.tsx  index.css  index.tsx  meta.ts
src/modules/super-browser/plugin/: AhaSlidesBot.tsx
src/pages/: HomePage.css  HomePage.tsx
src/routes/: index.tsx  moduleLoader.ts  types.ts
src/store/: headerStore.ts  sidebarStore.ts
src/styles/: main.css
